Quiz: wrap all blocks into one div and fix bottom margin

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -570,6 +570,10 @@ p + .revealed {
 	margin-bottom: 40px;
 }
 
+.quiz__blocks .quiz-block__is-question:last-child {
+	margin-bottom: 15px;
+}
+
 .quiz-block__is-question__title {
 	margin-bottom: 15px;
 }
